tests/ui/foreign_try.stderr
Error [E0014]: Lex does not use `try`
  --> tests/ui/foreign_try.lex:6:13
    |
  6 |     val n = try compute();
    |             ^^^
 Why: a call that can fail is marked with `?` after it, like `parse(x)?` (error handling arrives in M4 — until then, no call can fail)
 Fix: remove `try`
