tests/ui/foreign_try.lex
fn compute() -> Int {
    return 1;
}

fn main() {
    val n = try compute();
    print(n);
}
